sysyruntimelibrary-master/functional_test/12_getint.err
/mnt/e/workspace_clion/compiler_2020/sysyruntimelibrary-master/functional_test/12_getint.sy:3:13: error: syntax error, unexpected R_PARENTHESIS
3| 	a = getint()
 |              ^
before semantic ast:
 decList()
/mnt/e/workspace_clion/compiler_2020/sysyruntimelibrary-master/functional_test/12_getint.sy:0:0: error: not find main function
